; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_wm831x_bl.c_wm831x_backlight_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_wm831x_bl.c_wm831x_backlight_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.backlight_device = type { i32 }
%struct.wm831x_backlight_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @wm831x_backlight_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wm831x_backlight_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.backlight_device*, align 8
  %4 = alloca %struct.wm831x_backlight_data*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.backlight_device* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.backlight_device* %6, %struct.backlight_device** %3, align 8
  %7 = load %struct.backlight_device*, %struct.backlight_device** %3, align 8
  %8 = call %struct.wm831x_backlight_data* @bl_get_data(%struct.backlight_device* %7)
  store %struct.wm831x_backlight_data* %8, %struct.wm831x_backlight_data** %4, align 8
  %9 = load %struct.backlight_device*, %struct.backlight_device** %3, align 8
  %10 = call i32 @backlight_device_unregister(%struct.backlight_device* %9)
  %11 = load %struct.wm831x_backlight_data*, %struct.wm831x_backlight_data** %4, align 8
  %12 = call i32 @kfree(%struct.wm831x_backlight_data* %11)
  ret i32 0
}

declare dso_local %struct.backlight_device* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local %struct.wm831x_backlight_data* @bl_get_data(%struct.backlight_device*) #1

declare dso_local i32 @backlight_device_unregister(%struct.backlight_device*) #1

declare dso_local i32 @kfree(%struct.wm831x_backlight_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
